# video-transcriber-py

./: .gitignore  faster_transcribe.py  processar_video.sh  processar_video_zoom.sh  prompt_relatorio.txt  pyproject.toml  transcribe.py
relatorios/: disparo-lembrete-agendamento.md
